fix(adapted-styles): resolve footer overflow issue

--- a/src/styles/adaptedStyles/common/footer.scss
+++ b/src/styles/adaptedStyles/common/footer.scss
@@ -38,10 +38,6 @@
     .international-footer .link-box .link-item {
       border-color: var(--bew-border-color);
     }
-
-    .bili-footer {
-      min-width: fit-content;
-    }
   }
   // #endregion
 }
